correcting btn colour on smaller screens and aligning logo with content

--- a/liqd_product/assets/scss/components/_main_header.scss
+++ b/liqd_product/assets/scss/components/_main_header.scss
@@ -6,7 +6,11 @@
 .main-header--cms {
     background-color: $bg-light;
     margin: $r-spacer $r-spacer 0 $r-spacer;
-    padding-left: 2*$r-spacer;
+    padding-left: 1*$r-spacer;
+
+    @media screen and (min-width: $breakpoint) {
+        padding-left: 2*$r-spacer;
+    }
 
     @media screen and (min-width: $breakpoint-xl) {
         margin: 2*$r-spacer 2*$r-spacer 0 2*$r-spacer;
